# ftdc-tools

./: .gitignore  CLAUDE.md  README.md  TODO.md  ftdc-output.0.csv  ftdc-output.1.csv  ftdc-output.10.csv  ftdc-output.2.csv  ftdc-output.3.csv  ftdc-output.4.csv  ftdc-output.5.csv  ftdc-output.6.csv  ftdc-output.7.csv  ftdc-output.8.csv  ftdc-output.9.csv  ftdc-run.txt
.github/workflows/: ci.yml  release.yml
docs/: BIRCH_LIBRARY_BUG.md  FTDC_FORMAT_SPECIFICATION.md  FTDC_STATS.md  IMPLEMENTATION_PLAN.md  KNOWN_LIMITATIONS.md  PHASE_2_COMPLETE.md  ROADMAP.md  TESTING_COVERAGE.md  TIMEZONE_FIX.md  ftdc-keys.txt
examples/: README.md  extract_metrics.sh  python_extract.py
go/: README.md  go.mod  go.sum
go/cmd/ftdc-cli/: main.go
python/: README.md  pyproject.toml
python/ftdc/: service.py
python/ftdc/parser/: __init__.py  bson_parser.py  chunk.py  metrics.py  reader.py  types.py  varint.py
tests/: __init__.py  test_all_metrics.py  test_chunk.py  test_extraction_detail.py  test_metrics.py  test_reader.py  test_real_ftdc.py  test_varint.py
