[project]
name = "ftdc"
version = "0.1.0"
description = "CLI tool to download FTDC data from MongoDB Atlas clusters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "requests>=2.32.5",
    "pymongo>=4.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
ftdc = "ftdc.cli:main"

[tool.uv]
package = true
